# SFF-Game

./: .gitmodules  CMakeLists.txt  README.md
include/: menu.hpp
include/EscapeFromAmina/: cutscene.hpp  game.hpp  textureload.hpp
include/EscapeFromAmina2/: game2.hpp  hitbox.hpp  player.hpp
include/NjuyseBankRobbery/: bankGame.hpp  gameBank.hpp  hitbox.hpp  player.hpp
resources/: Credits.png~  SFFLogo.png-autosave.kra  SFFLogo.png~  SFFMenu.png-autosave.kra  SFFMenu.png~  menu.png~
resources/EscapeFromAmina2/: bg2.png~  characterchoose.png~
src/: main.cpp  menu.cpp
src/EscapeFromAmina/: cutscene.cpp  game.cpp  textureload.cpp
src/EscapeFromAmina2/: game2.cpp  hitbox.cpp  player.cpp
src/NjuyseBankRobbery/: bankGame.cpp  gameBank.cpp  hitbox.cpp  player.cpp
